--- a/main.css
+++ b/main.css
@@ -131,6 +131,30 @@ body{
 }
 
 
-@media only screen and (max-width: 800px){
-    
+@media only screen and (max-width: 600px){
+    .controls{
+        padding: 1rem;
+        position: fixed;
+        top: auto; left: 0;
+        bottom: 0;
+        width: 100vw;
+        max-width: max-content;
+        height: 200px;
+        overflow-y: scroll;
+        /* border-bottom-right-radius: 10px;
+        background-color: hsl(0 0% 50% / 0.1); */
+    }
+    .controls::after{
+        content: attr(data-count);
+        position: absolute;
+        top: auto; right: 20px;
+        bottom: 10;
+        width: 25px;
+        height: 25px;
+        background-color: inherit;
+        color: white;
+        border-radius: 50%;
+        display: grid;
+        place-items: center;
+    }
 }
