--- a/main.css
+++ b/main.css
@@ -7,6 +7,16 @@
     --bc-accent1: hsl(0 0% 30%);
     --fs-primary: 1.2rem;
     --lh-primary: 1.5rem;
+
+    --box-shadow-inward: 2px 2px 5px hsl(0 0% 0% / 0.8),
+    -2px -2px 5px hsl(0 0% 90% / 0.2),
+    inset 2px 2px 5px hsl(0 0% 0% / 0.85),
+    inset -2px -2px 5px hsl(0 0% 100% / 0.2);
+
+    --box-shadow-outward: 2px 2px 5px hsl(0 0% 0% / 0.8),
+    -1px -1px 2px hsl(0 0% 0% / 0.2),
+    inset 2px 2px 5px hsl(0 0% 100% / 0.2),
+    inset -2px -2px 5px hsl(0 0% 20% / 0.2);
 }
 
 
@@ -26,7 +36,14 @@ body{
     isolation: isolate;
 }
 
-
+main{
+    height: 100vh;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 100%;
+    gap: 1rem;
+}
 /*  === UTILITY CLASSES ===  */
 
 .link{
@@ -40,39 +57,23 @@ body{
 
 /*  === TOPOLOGY ===  */
 
-.canvas{
-    --size: 100;
-    position: absolute;
-    top: 0; left: 0;
-    width: calc(var(--size) * 1dvw);
-    width: calc(var(--size) * 1vw);
-    height: calc(var(--size) * 1dvh);
-    height: calc(var(--size) * 1vh);
-    background-color: black;
-    z-index: -1;
-}
 
 
 .controls{
+    position: relative;
+    grid-column: 1;
+    grid-row: 1;
     padding: 1rem;
-    position: fixed;
-    top: 0; left: 0;
+    /* position: fixed;
+    top: 0; left: 0; */
     width: max-content;
     border-bottom-right-radius: 10px;
     background-color: hsl(0 0% 50% / 0.1);
+    border-radius: 10px;
+    box-shadow: var(--box-shadow-outward);
+    overflow: scroll;
 }
-.controls::after{
-    content: attr(data-count);
-    position: absolute;
-    top: 100%; right: 0;
-    width: 25px;
-    height: 25px;
-    background-color: inherit;
-    color: white;
-    border-radius: 50%;
-    display: grid;
-    place-items: center;
-}
+
 .control-properties{
     margin-bottom: 1rem;
 }
@@ -131,28 +132,56 @@ body{
 }
 
 
+/* === DISPLAY === */
+
+.display{
+    grid-column: 2;
+    grid-row: 1;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow-inward);
+}
+
+.canvas{
+    --size: 100;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    /* position: absolute;
+    top: 0; left: 0;
+    width: calc(var(--size) * 1dvw);
+    width: calc(var(--size) * 1vw);
+    height: calc(var(--size) * 1dvh);
+    height: calc(var(--size) * 1vh);
+    background-color: black;
+    z-index: -1; */
+}
+
 @media only screen and (max-width: 600px){
-    .controls{
-        padding: 1rem;
-        position: fixed;
-        top: auto; left: 0;
-        bottom: 0;
-        width: 100vw;
-        max-width: max-content;
-        height: 200px;
-        overflow-y: scroll;
+    main{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        overflow: scroll;
     }
-    .controls::after{
-        content: attr(data-count);
-        position: absolute;
-        top: auto; right: 20px;
-        bottom: 10;
-        width: 25px;
-        height: 25px;
-        background-color: inherit;
-        color: white;
-        border-radius: 50%;
-        display: grid;
-        place-items: center;
+    .display{
+        height: 50vh;
+    }
+    .controls{
+        grid-column: 1;
+        grid-row: 2;
+
+        padding: 1rem;
+        width: 100%;
+        max-width: 266px;
+        margin: 0 auto;
+        border-bottom-right-radius: 10px;
+        background-color: hsl(0 0% 50% / 0.1);
+        border-radius: 10px;
+        box-shadow: var(--box-shadow-outward);
+    }
+    .display{
+        grid-column: 1;
+        grid-row: 1;
+        border-radius: 10px;
+        box-shadow: var(--box-shadow-inward);
     }
 }
