--- a/main.css
+++ b/main.css
@@ -139,21 +139,14 @@ main{
     grid-row: 1;
     border-radius: 10px;
     box-shadow: var(--box-shadow-inward);
+    overflow: scroll;
 }
 
 .canvas{
     --size: 100;
-    width: 100%;
-    height: 100%;
+    width: 400%;
+    height: 400%;
     background-color: black;
-    /* position: absolute;
-    top: 0; left: 0;
-    width: calc(var(--size) * 1dvw);
-    width: calc(var(--size) * 1vw);
-    height: calc(var(--size) * 1dvh);
-    height: calc(var(--size) * 1vh);
-    background-color: black;
-    z-index: -1; */
 }
 
 @media only screen and (max-width: 600px){
