--- a/main.css
+++ b/main.css
@@ -54,6 +54,19 @@ main{
     cursor: pointer;
 }
 
+.btn-active{
+    box-shadow: var(--box-shadow-outward);
+    color: var(--fs-primary);
+    transition: all 100ms ease;
+}
+.btn-active:active{
+    box-shadow: var(--box-shadow-inward);
+}
+.btn-inactive{
+    box-shadow: none;
+    border: 1px solid hsl(0 0% 0% / 0.8);
+    
+}
 
 /*  === TOPOLOGY ===  */
 
@@ -77,9 +90,11 @@ main{
 .control-properties{
     margin-bottom: 1rem;
 }
-.control-properties *{
-    margin-bottom: .5rem;
+.control-properties > *{
+    position: relative;
+    margin-bottom: .66rem;
 }
+
 .property-wrapper{
     display: flex;
     justify-content: space-between;
@@ -94,41 +109,92 @@ main{
 }
 .control-buttons{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, auto);
+    gap: 1rem;
+    margin-bottom: .5rem;
+}
+.control-buttons button{
+    border: none;
+    color: hsl(0 0% 80%);
+    border-radius: 10px;
+    font-weight: 700;
 }
 
-.control-buttons button{
-    padding: 2px 2px;
-}
 .calculate-btn{
-    grid-column: 1/2;
+    grid-column: 1;
     grid-row: 1;
+    font-size: 1.2rem;
+    
+    
+    text-transform: uppercase;
+    padding: 8px;
+}
+.calculate-btn.btn-active{
+    background-color: hsl(120 100% 50% / 0.5);
 }
 .render-btn{
-    grid-column: 3/4;
-    grid-row: 1;
+    grid-column: 1;
+    grid-row: 2;
+
+    padding: 8px;
+    font-size: .9rem;
+    background-color: hsl(0 0% 30% / 0.5);
+}
+.render-btn.btn-active{
+    background-color: hsl(220 100% 50% / 0.2);
 }
 .animation-control-buttons{
-    grid-column: 1/4;
-    grid-row: 2;
-    margin-top: 1rem;
+    grid-column: 1;
+    grid-row: 3;
     margin-bottom: 1rem;
 
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    grid-template-rows: repeat(2, auto);
+    gap: 5px;
+}
+.stop-animate-btn{
+    grid-column: 2/3;
+    grid-row: 2;
+    padding: 5px;
+    background-color: hsl(0 0% 30% / 0.5);
+}
+.stop-animate-btn.btn-active{
+    background-color: hsl(0 100% 50% / 0.2);
+}
+.animate-btn{
+    grid-column: 1/3;
+    grid-row: 1;
+    padding: 8px;
+    font-size: .9rem;
+    background-color: hsl(0 0% 30% / 0.5);
+}
+.animate-btn.btn-active{
+    background-color: hsl(300 100% 50% / 0.2);
+}
+.pause-animate-btn{
+    grid-column: 1/2;
+    grid-row: 2;
+    padding: 5px;
+    background-color: hsl(0 0% 30% / 0.5);
+}
+.pause-animate-btn.btn-active{
+    background-color: hsl(180 100% 50% / 0.2);
 }
 .process-notification-display{
     padding: 1rem 1rem 1rem 1rem;
-    
+    margin-bottom: .5rem;
     height: 50px;
     background-color: hsl(0 0% 50% / 0.1);
-    border-top-left-radius: 10px;
-    overflow: scroll;
+    border-radius: 5px;
+    box-shadow: inset 0px 0px 5px hsl(0 0% 0%);
+    overflow-y: scroll;
 }
 
 .process-notification-display > p{
-    color: hsl(60 100% 50% / 0.8)
+    width: 150px;
+    color: hsl(60 100% 50% / 0.8);
 }
 
 
